--- a/_static/custom.css
+++ b/_static/custom.css
@@ -1,6 +1,9 @@
 .pykc-logo {position:absolute;top:574px;left:767px;}
 
-h1 {margin-top:160px}
+h1 {margin-top:140px}
+h2 {font-size:60px;}
 
 #the-zen-of-python h1, #the-zen-of-python-cont h1 {margin-top:0px;font-size:50px;}
 #the-zen-of-python p, #the-zen-of-python-cont p {margin:0 0 0 0;padding-bottom:15px;padding-right:52px;font-size:30px;}
+
+#id4 h1 {margin-top:0px;}
