--- a/_static/custom.css
+++ b/_static/custom.css
@@ -7,3 +7,6 @@ h2 {font-size:60px;bottom:65px;}
 #the-zen-of-python p, #the-zen-of-python-cont p {margin:0 0 0 0;padding-bottom:15px;padding-right:52px;font-size:29px;}
 
 #id4 h1 {margin-top:0px;}
+
+#sponsors h1 {display:none;}
+#sponsors img {top:29px; left:9px; position:absolute;}
